@@ -51,6 +51,7 @@ Release 0.19.0 - Unreleased
                Chores, vs Threads, make HLog manager the write ahead log and
                not extend it to provided optional HLog sync operations.
    HBASE-970   Update the copy/rename scripts to go against change API
+   HBASE-966   HBASE-748 misses some writes
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
